Fix some spacing issues.

--- a/mosfell/assets/scss/base.scss
+++ b/mosfell/assets/scss/base.scss
@@ -214,10 +214,12 @@ table {
     background-color: rgb(255,255,255);
     background-color: rgba(255,255,255,0.9);
     margin-bottom: 1em;
+    padding: 0.5em 0;
 
     > li {
-        padding: 1em 0.5em 0.9em;
+        padding: 0 0.5em;
         list-style-type: none;
+        margin-bottom: 0;
     }
     .success {
         color: $color_success;
